# server/routers/index.js
@@ -3,6 +3,7 @@ import authRouter from "./auth-router.js";
 import userRouter from "./user-router.js";
 import adminUserRouter from "./admin-user-router.js";
 import adminRoleRouter from "./admin-role-router.js";
+import reportRouter from "./report-router.js";
 
 const router = Router();
 
@@ -11,6 +12,7 @@ const router = Router();
  */
 router.use("/auth", authRouter);
 router.use("/users", userRouter);
+router.use("/reports", reportRouter);
 router.use("/admin/users", adminUserRouter);
 router.use("/admin/roles", adminRoleRouter);
 export default router;
